--- a/JavaScript/Array/style.css
+++ b/JavaScript/Array/style.css
@@ -8,13 +8,37 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
-}
-button{
-    height: 40px;
-    width: 120px;
-    border-radius: 10px;
-    border: 1px solid #000;
+    flex-direction: column;
+    font-size: 20px;
     background: linear-gradient(15deg, #7b32e7 1%, #e90bc4 100%);
     color: #fff;
+}
+button{
+    height: 60px;
+    width: 160px;
+    font-size: 18px;
+    margin: 15px;
+    border-radius: 10px;
+    border: 1px solid #000;
+    background: linear-gradient(15deg, #00ff51 1%, #0055ff 100%);
+    color: #fff;
     font-weight: bold;
+}
+
+table, td{
+    background: linear-gradient(15deg, rgb(255, 0, 255) 1%, rgb(255, 0, 0) 100%);
+    font-weight: bold;
+    border: 1px solid grey;
+    padding: 7px 5px;
+    border-collapse: collapse;
+}
+#outMax{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    background: rgb(17, 179, 17);
 }
