--- a/Php/1. Login/style.css
+++ b/Php/1. Login/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background: #333;
+}
 
 nav{
     height: 60px;
@@ -9,28 +12,45 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background: rgb(36, 36, 204);
+    background: rgb(4, 47, 97);
 }
 nav a{
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 20px;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
+    transition: .4s;
+}
+nav a:hover{
+    background: rgb(32, 64, 100);
+    color: grey;
 }
 
 #login{
     height: 90vh;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    line-height: 35px;
 }
 #login form input{
+    margin-left: 5px;
+    padding: 0 5px;
     border: none;
-    border-bottom: 1px solid black;
+    background: transparent;
+    color: #fff;
+    border-bottom: 2px solid white;
+}
+#login form input:focus{
+    outline-width: 0;
 }
 #login form button{
     padding: 5px 10px;
+    width: 49.1%;
     border-radius: 10px;
     background: lightblue;
     border: 1px solid #000;
