--- a/Php/1. Login/style.css
+++ b/Php/1. Login/style.css
@@ -3,7 +3,9 @@
     padding: 0;
 }
 body{
-    background: #333;
+    background-image: url('https://images6.alphacoders.com/101/1015944.jpg'); /* https://i.pinimg.com/originals/9c/bd/67/9cbd67b19efb3f6b10a9c8a00e256f0d.jpg */
+    object-fit: cover;
+    background-size: 100%;
 }
 
 nav{
@@ -29,29 +31,55 @@ nav a:hover{
 }
 
 #login{
+    width: 100%;
     height: 90vh;
-    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: #fff;
     line-height: 35px;
 }
+#login form{
+    width: 19rem;
+    border-radius: 5px;
+    padding: 30px 15px 20px 15px;
+    background: rgb(25, 30, 55);
+}
 #login form input{
-    margin-left: 5px;
-    padding: 0 5px;
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    text-indent: 10px;
     border: none;
-    background: transparent;
+    border-radius: 5px;
+    background: rgb(41, 49, 88);
     color: #fff;
-    border-bottom: 2px solid white;
 }
 #login form input:focus{
     outline-width: 0;
 }
+#login a{
+    margin: 5px 0;
+    text-decoration: none;
+    display: flex;
+    justify-content: end;
+    color: grey;
+}
+#login form .btn-container{
+    display: flex;
+    justify-content: space-between;
+}
 #login form button{
-    padding: 5px 10px;
-    width: 49.1%;
-    border-radius: 10px;
-    background: lightblue;
+    width: 40%;
+    padding: 10px 0;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: bold;
+    background: rgb(29, 76, 92);
+    border: none;
     border: 1px solid #000;
+}
+.btn-signup{
+    width: 100% !important;
 }
