--- a/Php/1. Login/src/php_style.css
+++ b/Php/1. Login/src/php_style.css
@@ -29,17 +29,20 @@ body{
 }
 
 .profile-div{
-    height: 300px;
-    width: 300px;
-    padding: 30px 0;
+    height: 250px;
+    width: 50%;
+    padding: 30px 20px;
     border-radius: 10px;
-    text-align: center;
+    display: flex;
     background: rgb(34, 45, 48);
     color: #fff;
 }
 .profile-div img{
-    width: 70px;
-    height: 70px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%;
+}
+.profile-info-div{
+    margin: 30px;
 }
