--- a/Php/1. Login/style.css
+++ b/Php/1. Login/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: url('https://images6.alphacoders.com/101/1015944.jpg'); /* https://i.pinimg.com/originals/9c/bd/67/9cbd67b19efb3f6b10a9c8a00e256f0d.jpg */
+    background-image: url('https://i.pinimg.com/originals/9c/bd/67/9cbd67b19efb3f6b10a9c8a00e256f0d.jpg');
     object-fit: cover;
     background-size: 100%;
 }
@@ -48,6 +48,10 @@ nav a:hover{
     padding: 30px 15px 20px 15px;
     background: rgb(25, 30, 55);
 }
+#login h1{
+    color: rgb(85, 85, 85);
+    margin-bottom: 10px;
+}
 #login form input{
     width: 100%;
     height: 40px;
@@ -87,4 +91,5 @@ nav a:hover{
 }
 .btn-signup{
     width: 100% !important;
+    margin-top: 10px;
 }
